@@ -701,7 +701,7 @@ then
 else
 
 	dnl check pthread.h and standard thread libraries
-	for i in "pthread" "c_r" "thread" "pthreads" "gthreads" ""
+	for i in "pthread" "thread" "pthreads" "gthreads" ""
 	do
 		if ( test -n "$i" )
 		then
@@ -726,13 +726,6 @@ else
 
 			AC_MSG_RESULT(yes)
 
-			if ( test -n "$i" )
-			then
-				AC_MSG_CHECKING(whether lib$i works)
-			else
-				AC_MSG_CHECKING(whether no library works)
-			fi
-
 			dnl  If we found a set of headers and libs, try
 			dnl  linking with them.  We'll try six times,
 			dnl  first with just the header and lib that we
@@ -756,28 +749,23 @@ else
 					TESTLIB="$PTHREADLIB"
 				elif ( test "$try" = "4" )
 				then
-					TESTINCLUDES="$PTHREAD_COMPILE $PTHREADINCLUDESS"
+					TESTINCLUDES="$PTHREAD_COMPILE $PTHREADINCLUDES"
 					TESTLIB="$PTHREADLIB -pthread"
 				elif ( test "$try" = "5" )
 				then
-					TESTINCLUDES="$PTHREADINCLUDESS"
+					TESTINCLUDES="$PTHREADINCLUDES"
 					TESTLIB="-pthread"
 				elif ( test "$try" = "6" )
 				then
-					TESTINCLUDES="$PTHREAD_COMPILE $PTHREADINCLUDESS"
+					TESTINCLUDES="$PTHREAD_COMPILE $PTHREADINCLUDES"
 					TESTLIB="-pthread"
 				fi
 
 				HAVE_PTHREAD=""
 				dnl try to link
-				FW_TRY_LINK([#include <pthread.h>],[pthread_create(NULL,NULL,NULL,NULL);],[$PTHREAD_COMPILE $CPPFLAGS $PTHREADINCLUDES],[$PTHREADLIB],[],[HAVE_PTHREAD="yes"],[])
-				if ( test -z "$HAVE_PTHREAD" )
-				then
-					dnl try link again, some older
-					dnl thread implementations have
-					dnl non-pointer 2nd parameters
-					FW_TRY_LINK([#include <pthread.h>],[pthread_create(NULL,pthread_attr_default,NULL,NULL);],[$PTHREAD_COMPILE $CPPFLAGS],[-pthread],[],[HAVE_PTHREAD="yes"],[])
-				fi
+				AC_MSG_CHECKING(whether $TESTINCLUDES ... $TESTLIB works)
+				FW_TRY_LINK([#include <stddef.h>
+#include <pthread.h>],[pthread_exit(NULL);],[$CPPFLAGS $TESTINCLUDES],[$TESTLIB],[],[AC_MSG_RESULT(yes); HAVE_PTHREAD="yes"],[AC_MSG_RESULT(no)])
 
 				dnl  If the link succeeded then keep
 				dnl  the flags.
@@ -795,10 +783,7 @@ else
 
 			if ( test -n "$HAVE_PTHREAD" )
 			then
-				AC_MSG_RESULT(yes)
 				break
-			else
-				AC_MSG_RESULT(no)
 			fi
 
 		else
