@@ -6,6 +6,7 @@
 	consolidated php include tweaks
 	got java api working on windows
 	updated pdo driver to convert float fields to strings rather than ints
+	updated pthread test to match rudiments pthread test
 
 0.55 - fixed a sql translation bug related to exists clauses
 	added deployment projects for windows
